--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,36 @@
 page-home {
+    .titulo{
+        font-family: "Comic Sans MS", cursive, serif;
+        text-align: center;
+    }
+    .menuPrincipal{
+        background-image: url("../../assets/img/login-fondo.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    .present{
+        text-align: justify;
+    }
+
+    h1{
+        text-align: center;
+    }
+
+    ion-card{
+        position: relative;
+        text-align: right;
+    }
+    img{
+        width: 100px; height: 100px;
+    }
+    .tema{
+        position: absolute;
+        top: 36%;
+        font-size: 2.0em;
+        width: 90%;
+        font-weight: bold;
+        color: #000;
+    }
 
 }
