--- a/src/pages/historial/historial.scss
+++ b/src/pages/historial/historial.scss
@@ -10,10 +10,9 @@ page-historial {
    }
 
    .menuPrincipal{
-//     background-image: url("../../assets/img/login-fondo.jpg");
+     background-image: url("../../assets/img/degradado2.jpg");
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
-     background-color: #C0F2FF;
    }
 }
