--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,6 +7,7 @@ page-home {
    }
    ion-list-header{
    	 text-align: center;
+     font-size: 1.5em;
    }
    ion-toolbar{
    	 text-align: center;
