--- a/src/pages/registro/registro.scss
+++ b/src/pages/registro/registro.scss
@@ -1,4 +1,5 @@
 page-registro {
+  
    .titulo{
      font-family: "Comic Sans MS", cursive, serif;
      letter-spacing: 0;
@@ -9,10 +10,10 @@ page-registro {
    }
 
    .menuPrincipal{
+     background-image: url("../../assets/img/degradado2.jpg");
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
-     background-color: #C0F2FF;
    }
 
    ion-card {
