--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -38,7 +38,7 @@ page-register {
    .text{
        justify-content: center;
        font-size: 1.3em;
-       color: #C9D6FF;
+       color: #1A4DFF;
    }
 
 }
